--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,5 @@
 html {
   scroll-behavior: smooth;
 }
+
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
